--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/midea/pikaso.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Gugi&display=swap');
@@ -11,7 +11,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
       </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <title>Vite + React</title>
+    <title>Artivarse</title>
   </head>
   <body>
     <div id="root"></div>
